# mosaic-life

./: .env.production.template  .gitignore  AGENTS.md  CLAUDE.md  INFRASTRUCTURE_SETUP.md  README.md  bedrock list-foundation-models --region us-east-1 --output json 2>&1 | python3 -c "  core-api-rendered.yaml  justfile  migration-fix.yaml
apps/docs/: Dockerfile  Dockerfile.ci  mkdocs.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  typedoc-shared.json  typedoc-web.json
apps/docs/docs/: changelog.md  index.md
apps/docs/scripts/: build.sh  generate-openapi.sh  generate-typedoc.sh
apps/docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/: AWS.md  (+5 more)
services/core-api/: Dockerfile  README.md  STEP_1.2.2_IMPLEMENTATION_SUMMARY.md  alembic.ini  conftest.py  pyproject.toml
services/core-api/alembic/: env.py
services/core-api/app/: config.py  database.py  health.py  logging.py  main.py
services/core-api/scripts/: backfill_embeddings.py  backfill_entities.py  backfill_member_relationships.py  seed.py  start.sh  test_ses.py
services/core-api/tests/: conftest.py  test_activity_enriched_recent.py  test_activity_enrichment.py  test_activity_feed_routes.py  test_activity_privacy.py  test_activity_routes.py  test_activity_service.py  test_activity_social_feed.py  test_auth_settings.py  test_backfill_member_relationships.py  test_change_summary.py  test_connection_models.py  test_connection_notifications.py  test_connection_request_service.py  test_connection_routes.py  test_connection_service.py  test_connections.py  test_database.py  test_email_service.py  test_favorite_api.py  test_favorite_service.py  test_gender_fields.py  test_health.py  test_invitation_api.py  test_invitation_model.py  test_invitation_service.py  test_legacy_access_request_model.py  test_legacy_access_request_routes.py  test_legacy_api.py  (+37 more)
(+1146 files in other folders)
