[project]
name = "core-api"
version = "0.1.0"
description = "Core API (BFF + Stories + Media minimal) for MVP Option B"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "python-json-logger>=2.0.7",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-exporter-otlp>=1.25.0",
  "prometheus-client>=0.20.0",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "asyncpg>=0.29.0",
  "boto3>=1.34.0",
  "authlib>=1.3.0",
  "python-jose[cryptography]>=3.3.0",
  "itsdangerous>=2.2.0",
  "types-python-jose>=3.3.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "aiosqlite>=0.19.0",
  "ruff>=0.5.0",
  "mypy>=1.11.0",
  "types-Authlib>=1.3.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "aiosqlite>=0.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

